--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 
 <body>
-    
+    <div class="container">
+        <div class="jumbotron">
+            <h1>My Portfolio</h1>
+            <p>Yay</p>
+        </div>
+    </div>
 </body>
 </html>
