--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
             </div>
             <ul class="nav navbar-nav">
                 <li class="active"><a href="index.html">Home</a></li>
-                <li><a href="#">Page 1</a></li>
-                <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
+                <li><a href="projects.html">My Cool Projects</a></li>
+                <li><a href="https://github.com/Axquaris/BootstrapWorkshop/commits/master">Github</a></li>
+                <li><a href="https://www.linkedin.com/">Linkedin</a></li>
             </ul>
         </div>
     </nav>
