finish-projects-page

--- a/projects.html
+++ b/projects.html
@@ -26,6 +26,22 @@
     <div class="container">
         <div class="jumbotron">
             <h1>My Projects!</h1>
+            <p>Links are below</p>
+        </div>
+        
+        <div class="list-group">
+            <a href="https://github.com/Axquaris/AsteroidDodger" target="_blank" class="list-group-item">
+                <h1>AsteriodDodger</h1>
+                <p>A classic asteroid-dodging game with realistic physics and crazy particle effects!</p>
+            </a>
+            <a href="https://github.com/Axquaris/ModularShip" target="_blank" class="list-group-item">
+                <h1>ModularShip</h1>
+                <p>A game about building a spaceship and blowing up enemies</p>
+            </a>
+            <a href="https://github.com/Axquaris/Ecoblobs" target="_blank" class="list-group-item">
+                <h1>Ecoblobs</h1>
+                <p>A simulation of bacterial life</p>
+            </a>
         </div>
     </div>
 </body>
