--- a/index.html
+++ b/index.html
@@ -31,17 +31,17 @@
         
         <div class="row">
             <div class="col-sm-4">
-                <img src="images/squirrel.png" class="img-circle" width="100%">
+                <img src="images/placeholder.png" class="img-circle" width="100%">
                 <h3>About Me</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed ac tortor vitae nibh rutrum suscipit. Proin laoreet lectus ut nisl posuere laoreet. Proin vitae nisi vel orci cursus gravida. In hac habitasse platea dictumst. Fusce bibendum, tortor quis ullamcorper tempor, massa felis laoreet nulla, eget sagittis ex mauris a urna. Curabitur pellentesque, metus ut mollis tristique, justo ex ultricies mauris, nec vulputate libero sapien eu sapien. Nam id accumsan arcu.</p>
             </div>
             <div class="col-sm-4">
-                <img src="images/fractal.jpg" class="img-rounded" width="100%">
+                <img src="images/placeholder.png" class="img-rounded" width="100%">
                 <h3>My Projects</h3>
                 <p>Donec fringilla venenatis sapien nec hendrerit. Donec non consectetur lectus, ac pellentesque nisl. Integer et risus sit amet quam dignissim hendrerit. Quisque odio tellus, elementum vitae faucibus ut, mattis sit amet tellus. Suspendisse potenti. Fusce sed laoreet sem. Maecenas blandit mauris dapibus lectus facilisis convallis. Nullam consectetur ultricies lectus, et tincidunt nisi eleifend sed. Suspendisse dignissim tincidunt ex, vitae finibus lorem. In hac habitasse platea dictumst. Sed placerat molestie nulla, eleifend gravida enim. Aenean ut elit sed nisl egestas vulputate sit amet eu arcu. Donec lobortis eros erat.</p>
             </div>
             <div class="col-sm-4">
-                <img src="images/phone.jpg" class="img-thumbnail" width="100%">
+                <img src="images/placeholder.png" class="img-thumbnail" width="100%">
                 <h3>How to Contact Me</h3>
                 <p>Integer sagittis venenatis fringilla. Nunc auctor condimentum neque quis rutrum. Sed aliquet, lacus vitae euismod congue, elit enim aliquet ligula, in consectetur dolor purus gravida tortor. Quisque vehicula tellus felis, a posuere nunc consectetur at. Ut sollicitudin eleifend iaculis. Sed vestibulum volutpat mi, eu pretium tellus maximus vel. Praesent posuere ex condimentum tempus lobortis. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin quis mauris lobortis risus consectetur imperdiet non quis magna.</p>
             </div>
