--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
                 <h1>ModularShip</h1>
                 <p>A game about building a spaceship and blowing up enemies</p>
             </a>
-            <a href="https://github.com/Axquaris/Ecoblobs" target="_blank" class="list-group-item">
+            <a href="https://github.com/Axquaris/Ecoblobs" target="_blal.p.gnk" class="list-group-item">
                 <h1>Ecoblobs</h1>
                 <p>A simulation of bacterial life</p>
             </a>
