--- a/end_result/index.html
+++ b/end_result/index.html
@@ -24,10 +24,10 @@
     </nav>
 
     <div class="container">
-        <p><div class="jumbotron">
+        <div class="jumbotron">
             <h1>My Portfolio</h1>
             <p>Hello World!</p>
-        </div></p>
+        </div>
         
         <div class="row">
             <div class="col-sm-4">
