--- a/end_result/projects.html
+++ b/end_result/projects.html
@@ -24,9 +24,8 @@
     </nav>
 
     <div class="container">
-        <div class="jumbotron">
-            <h1>My Projects!</h1>
-            <p>Links are below</p>
+        <div class="page-header">
+            <h1>My Projects! <small>Links are below</small></h1>
         </div>
         
         <div class="list-group">
